--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ cache:
 
 install:
   - npm install -g yarn
-  - npm i -g @angular/cli
-  - yarn i --silent --no-progress
+  - yarn install -g @angular/cli
+  - yarn install --silent --no-progress
 
 script:
   - yarn lint
