--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ cache:
     - node_modules
 
 install:
-  - npm install -g yarn
-  - yarn install -g @angular/cli
+  - npm i -g yarn
+  - npm i -g @angular/cli
   - yarn install --silent --no-progress
 
 script:
