--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ os:
 language: node_js
 node_js:
  - "11.0.0"
+addons:
+ apt:
+   sources:
+     - google-chrome
+   packages:
+     - google-chrome-stable
 dist: trusty
 sudo: false
 
@@ -14,7 +20,11 @@ cache:
   directories:
     - node_modules
 
-install:
+before_install:
+  - export CHROME_BIN=/usr/bin/google-chrome
+#  - export DISPLAY=:99.0
+#  - sh -e /etc/init.d/xvfb start
+  - rm -rf package-lock.json
   - npm i -g yarn
   - npm i -g @angular/cli
   - yarn install --silent --no-progress
