--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ cache:
 
 before_install:
   - export CHROME_BIN=/usr/bin/google-chrome
-#  - export DISPLAY=:99.0
-#  - sh -e /etc/init.d/xvfb start
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
   - rm -rf package-lock.json
   - npm i -g yarn
   - npm i -g @angular/cli
